# zeiss-czi-pyramidizer

./: .editorconfig  .gitignore  .mega-linter.yml  CMakeLists.txt  LICENSE  README.md  README.release.md  REUSE.toml  mkdocs.yml
.atomineer/: Prefs.xml
.github/: actionlint.yaml
.github/workflows/: build-package-alpine-linux-x64.yml  build-package-linux-x64.yml  build-package-windows-arm64.yml  build-package-windows-x64.yml  build-package.yml  cmake_alpine_linux.yml  cmake_linux_x64.yml  cmake_windows_arm64.yml  cmake_windows_x64.yml  docs.yml  megalinter.yml  release.yml  reuse.yml
czi-pyramidizer/: CMakeLists.txt  consoleio.cpp  consoleio.h  czi-pyramidizer.cpp  czi-pyramidizer_config.h.in  utilities.cpp  utilities.h
doc/: TODOs.md  notes.txt  usage.md
docs/: getting-started.md  release-lgpl-relinking.md  releasing.md  version-history.md
docs/usage/: examples.md
libpyramidizer/: CMakeLists.txt  IConsoleIo.h  libpyramidizer.cpp  libpyramidizer.h  libpyramidizer_config.h.in
libpyramidizer-unittests/: CMakeLists.txt  check_for_pyramid_tests.cpp  commandlineparser_tests.cpp  imaging_tests.cpp  libCZIUtilities.cpp  libCZIUtilities.h  plane_enumerator_tests.cpp  pyramid_utils_test.cpp  pyramidizer_operation_test.cpp  tile_helper_test.cpp  tiling_enumerator_tests.cpp
libpyramidizer/inc/: CheckForPyramid.h  IContext.h  IDecimationProcessing.h  ILog.h  UpperPyramidLayersPyramidizer.h  commandlineoptions.h  do_pyramidize.h  plane_enumerator.h  pyramid_utilities.h  tile_helper.h  (+3 more)
modules/: libCZI.cmake
release/: generate-spdx-sbom.py  sbom-components.json
(+18 files in other folders)
